syntax = "proto3";

package common;

import "common/v1/metadata.proto";

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/common/v1;commonpb";

// EntityType categorizes real-world/conceptual objects
enum EntityType {
  ENTITY_TYPE_UNSPECIFIED = 0;
  
  // Core semantic types
  ENTITY_TYPE_PERSON = 1;
  ENTITY_TYPE_ORGANIZATION = 2;
  ENTITY_TYPE_LOCATION = 3;
  ENTITY_TYPE_EVENT = 4;
  
  // Domain-specific
  ENTITY_TYPE_TECHNOLOGY = 5;       // e.g., "gRPC", "WebAssembly"
  ENTITY_TYPE_METHODOLOGY = 6;      // e.g., "Federated Learning"
  ENTITY_TYPE_ARTIFACT = 7;         // e.g., "PDF Document", "Video Stream"
  
  // Abstract concepts
  ENTITY_TYPE_CONCEPT = 8;          // e.g., "Concurrency", "Security"
  ENTITY_TYPE_MEASUREMENT = 9;      // e.g., "Throughput", "Latency"
}

// Core relationship definition for knowledge graph
message Relation {
  string type = 1;         // "related", "child", "similar", etc.
  string target_uri = 2;   // URI reference to other entity
  float strength = 3;      // Relationship confidence (0.0-1.0)
  int64 last_updated = 4;  // Unix timestamp for GC
}

// Entity represents a distinct real-world/conceptual object
message Entity {
  // Canonical name (e.g., "Robert Martin")
  string name = 1;
  
  // Entity classification
  EntityType type = 2;
  
  // Contextual variants (e.g., "Uncle Bob", "Robert C. Martin")
  repeated string aliases = 3;
  
  // Confidence score (0.0-1.0)
  float confidence = 4;
  
  // Provenance within source
  message Occurrence {
    string source_uri = 1;  // URI of source document
    int32 start_offset = 2;  // Character position
    int32 end_offset = 3;
    string source_field = 4; // e.g., "summary", "chunk3"
  }
  repeated Occurrence occurrences = 5;
  
  // Knowledge graph relationships
  repeated Relation relations = 6;
  
  // Cross-references
  string wikipedia_id = 7;
  string wikidata_id = 8;
  string uri = 9;           // Canonical entity URI
}

// Lightweight reference for graph storage
message Reference {
  string uri = 1;                   // Unique resource identifier
  common.Metadata metadata = 2;   // Standard metadata
  repeated Relation relations = 3;   // Knowledge graph connections
}